--- a/Alert/res/values/strings.xml
+++ b/Alert/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="main_no_items">No orders to display</string>
+
+    <color name="read">#F8F8F8 </color>
+    <color name="unRead">#FFFFFF</color>
+    <color name="textColor">#000000</color>
 
 </resources>
