playing with LoadManager for working with contentProvider

--- a/Alert/res/values/strings.xml
+++ b/Alert/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">News Alerts</string>  
+   <!--  <string name="app_name">News Alerts</string> -->  
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">News Alerts</string>
     <string name="main_no_items">No News to display</string>
@@ -9,4 +9,15 @@
     <color name="unRead">#FFFFFF</color>
     <color name="textColor">#000000</color>
 
+    <string name="hello">Hello World, Todo!</string>
+	<string name="app_name">Todo</string>
+	<string name="no_todos">Currently there are no Todo items maintained</string>
+	<string name="menu_insert">Add Item</string>
+	<string name="menu_delete">Delete Todo</string>
+	<string name="todo_summary">Summary</string>
+	<string name="todo_description">Delete Todo</string>
+	<string name="todo_edit_summary">Summary</string>
+	<string name="todo_edit_description">Description</string>
+	<string name="todo_edit_confirm">Confirm</string>
+    
 </resources>
