completed spike with contentprovider  thanks to todos exampel from Lars Vogel

--- a/todos/res/values/strings.xml
+++ b/todos/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
-
     <string name="app_name">Todos</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Todos</string>
     <string name="no_todos">Currently there are no Todo items maintained</string>
+    <string name="menu_insert">Add Item</string>
+    <string name="menu_delete">Delete Todo</string>
+    <string name="todo_edit_summary">Summary</string>
+    <string name="todo_edit_description">Description</string>
+    <string name="todo_edit_confirm">Confirm</string>
 </resources>
